--- a/bower.json
+++ b/bower.json
@@ -12,10 +12,11 @@
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
-    "underscore" : "1.7.0",
-    "angular-underscore-module" : "1.0.1",
-    "jquery-ui" : "1.11.1",
-    "angular-ui-sortable" : "0.12.11"
+    "underscore": "1.7.0",
+    "angular-underscore-module": "1.0.1",
+    "jquery-ui": "1.11.1",
+    "angular-ui-sortable": "0.12.11",
+    "angular-shuffler": "~1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
