--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^0.2.1",
+    "grunt-gh-pages": "^0.9.1",
     "grunt-github-pages": "0.0.4",
     "grunt-google-cdn": "^0.4.0",
     "grunt-karma": "^0.9.0",
