--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-underscore-module": "1.0.1",
     "jquery-ui": "1.11.1",
     "angular-ui-sortable": "0.12.11",
-    "angular-shuffler": "~1.0.0"
+    "angular-shuffler": "~1.0.0",
+    "angular-bootstrap": "~0.11.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
