--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
+    "dgeni": "^0.4.1",
+    "dgeni-packages": "^0.10.7",
     "grunt": "^0.4.1",
     "grunt-angular-templates": "^0.5.7",
     "grunt-autoprefixer": "^0.7.3",
