--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "jquery-ui": "1.11.1",
     "angular-ui-sortable": "0.12.11",
     "angular-shuffler": "~1.0.0",
-    "angular-bootstrap": "~0.11.2"
+    "angular-bootstrap": "~0.11.2",
+    "less": "~2.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
