--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-ui-sortable": "0.12.11",
     "angular-shuffler": "~1.0.0",
     "angular-bootstrap": "~0.11.2",
-    "less": "~2.1.1"
+    "less": "~2.1.1",
+    "angular-material": "~0.6.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
