--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-shuffler": "~1.0.0",
     "angular-bootstrap": "~0.11.2",
     "less": "~2.1.1",
-    "angular-material": "~0.6.1"
+    "angular-material": "master",
+    "material-design-icons": "~1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
